# tauri

./: .gitignore  README.md  Readme1.md  deepseek_bash_20250421_98f24f.sh
crud/: setup_table_crud_app.sh
crud/table_crud_app/: .env  Cargo.toml
crud/table_crud_app/migrations/: 20230101000000_init.sql
crud/table_crud_app/src/: main.rs
crud/table_crud_app/static/: app.js  style.css
crud/table_crud_app/templates/: index.html  table_list.html  table_view.html
dbm/: Cargo.toml  todos.db
dbm/src/: main.rs
dbm/templates/: index.html  todo_item.html  todo_list.html
new_crud/: create_crud_app.sh
new_crud/rust_crud_app/: Cargo.toml
samba-mounter-app/: package-lock.json  package.json
samba-mounter-app/src/: index.html  index.html.2  main.js  styles.css
samba-mounter-app/src-tauri/: Cargo.toml  tauri.conf.json
server/: a.txt  g.sh  g1.sh  g2.sh  gg.sh  rdme.md  sql.md  sql_app.db
server/mariadb/: compose.yml
server/mysql/: compose copy.yml  compose.yml  config.user.inc.php
server/tnkp/: .env  requirements.txt  run.sh  sql_app.db
tauri-app/: package-lock.json  package.json
tauri-app/src/: index copy 2.html  index copy 3.html  (+3 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tnkp/: .env  .gitignore  Cargo.toml  a.txt  b.txt  g.sh  sqlite_create_tables.sql  todos.db
tnkp/src/: main.rs
tnkp/templates/: error.html  index.html  users.html  users_edit.html  users_item.html  users_list.html  work_subs.html  work_subs_edit.html  work_subs_item.html  work_subs_list.html  works.html  works_edit.html  works_item.html  works_list.html
todo/: todos.db
(+102 files in other folders)
