[package]
name = "table_crud_app"
version = "0.1.0"
edition = "2021"

[dependencies]
#actix-web = "4"
#actix-cors = "0.6"
#actix-files = "0.6"
#askama = { version = "0.11", features = ["with-actix-web"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
#uuid = { version = "1.0", features = ["v4"] }
#dotenv = "0.15"
#log = "0.4"
#env_logger = "0.9"
thiserror = "1.0"

actix-web = "4"
actix-cors = "0.6"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # 新增
dotenv = "0.15"
log = "0.4"  # 新增
env_logger = "0.10"  # 新增
actix-files = "0.6"
askama = "0.12"
